CSS Colours and Shadows

--- a/CSS/element_id_class_CSS.html
+++ b/CSS/element_id_class_CSS.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn CSS</title>
-    <link rel="stylesheet" href="element_id_class_CSS.css"
+    <link rel="stylesheet" href="element_id_class_CSS.css">
+    <link rel="stylesheet" href="main_CSS.css">
 </head>
 <body>
     <h1>Python Programming is fun!</h1>
