Different types of background property

--- a/CSS/main_CSS.html
+++ b/CSS/main_CSS.html
@@ -26,6 +26,7 @@
     <h2><span>Joy</span> to the world!</h2>
     <div class="square"></div>
     <div id="circle">Hey!</div>
+    <div id="bg_check">Hey!</div>
     <br>
 </body>
 </html>
