--- a/CSS/main_CSS.html
+++ b/CSS/main_CSS.html
@@ -11,6 +11,7 @@
 <body>
     <div class="shad"></div>
     <h2 class="shad_text">C is fun!</h2>
+    <h2 class="star">Python is cool!</h2>
     <div class="containerA">
         <h2 class="name">Colour with actual name</h2>
         <h2 class="hexcode">Colour with HexCode</h2>
