--- a/CSS/x_watch.html
+++ b/CSS/x_watch.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Python Programming is fun!</h1>
+    <h2>C is cool!</h2>
     <h3>We will learn Javascript next</h3>
     <h2><span>Joy</span> to the world!</h2>
     <div class="square"></div>
