--- a/CSS/main_CSS.html
+++ b/CSS/main_CSS.html
@@ -22,6 +22,11 @@
         <h2 class="hexcode">Colour with HexCode</h2>
         <h2 class="rgb">Colour with actual name</h2>
     </div>
+    <div class="containerC">
+        <h2 class="name">Colour with actual name</h2>
+        <h2 class="hexcode">Colour with HexCode</h2>
+        <h2 class="rgb">Colour with actual name</h2>
+    </div>
     <h1>Python Programming is fun!</h1>
     <h3>We will learn Javascript next</h3>
     <h2><span>Joy</span> to the world!</h2>
